@@ -25,6 +25,12 @@
 
 #include <gst/interfaces/mixer.h>
 
+#include "xfce-mixer-stock.h"
+#include "xfce-mixer-preferences.h"
+#include "xfce-mixer-card-combo.h"
+#include "xfce-mixer-track-combo.h"
+#include "xfce-mixer-track-type.h"
+
 G_BEGIN_DECLS;
 
 void           xfce_mixer_init                   (void);
