@@ -23,15 +23,14 @@
 #include <config.h>
 #endif
 
-#include <libxfce4util/libxfce4util.h>
-#include <libxfcegui4/libxfcegui4.h>
-
 #include <gst/gst.h>
 #include <gst/interfaces/mixer.h>
 
+#include <libxfce4util/libxfce4util.h>
+#include <libxfcegui4/libxfcegui4.h>
+
 #include "libxfce4mixer/libxfce4mixer.h"
-#include "libxfce4mixer/xfce-mixer-stock.h"
-#include "libxfce4mixer/xfce-mixer-track-type.h"
+
 #include "xfce-mixer-track.h"
 
 
